--- a/index.css
+++ b/index.css
@@ -15,14 +15,16 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWAidVfyJU7HQHlr-Fz6cXUP8HsqbhkJLNipNCXfolQoCNQtbTa_4DpIZHzN-IdWT33Us&usqp=CAU);
+    background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20210115/pngtree-digital-backend-banner-technology-concept-particle-background-design-image_520150.jpg);
     background-size: cover;
     background-position:center;
+   
 }
 
 
 .container{
     padding: 10px 10%;
+    
 
 }
 nav{
@@ -101,7 +103,7 @@ nav ul li a:hover::after{
 #about{
 padding:60px 0px;
 color: #ababab;
-background-color: #101010;
+background-color: #020638;
 }
 .row{
     display: flex;
@@ -113,6 +115,7 @@ background-color: #101010;
 }
 .about-col-1 img{
     width:100%;
+    height: 420px;
     border-radius: 15px;
 }
 
@@ -188,7 +191,7 @@ font-size: 20px;
 
 #portfolio{
     padding: 50px 0px;
-    background-color: #101010;
+    background-color: #020638;
 
 }
 .project-list{
@@ -214,7 +217,7 @@ font-size: 20px;
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    background: linear-gradient(#020638,#ff004f);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -253,7 +256,7 @@ transform: scale(1.1);
     height: 100%;
 }
 #contact{
-    background-color: #101010;
+    background-color: #020638;
 }
 
 .contact-left{
@@ -296,7 +299,7 @@ form input,form textarea{
     width: 100%;
     border: 0;
     outline: none;
-    background:#262626;
+    background:#f89d9d;
     padding: 15px;
     margin: 15px 0;
     color: white;
@@ -319,7 +322,7 @@ form input,form textarea{
     width:100%;
     text-align: center;
     padding: 25px 0;
-    background: #262626;
+    background: #010429;
     font-weight: 300;
     margin-top: 20px;
 }
