--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ nav{
 nav.sticky{
     position: fixed;
     top: 0px;
-    background-color: #8708b1;
+    background-color: #240145;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     transition: 0.6s;
     z-index: 1;
